🚀 2단계 - 깃헙 로그인 (#405)
* refactor: step1 리뷰 반영

* docs: step2 요구사항 작성

* feat: 임시 깃허브 로그인 기능 구현

* docs: Github OAuth 과정

* feat&test: 깃허브 로그인 기능 구현 및 테스트

* docs: README 업데이트