@@ -1,5 +1,6 @@
 package nextstep;
 
+import java.util.List;
 import nextstep.member.domain.Member;
 import nextstep.member.domain.MemberRepository;
 import nextstep.member.domain.RoleType;
@@ -9,14 +10,14 @@ import java.util.Arrays;
 
 @Component
 public class DataLoader {
-    private MemberRepository memberRepository;
+    private final MemberRepository memberRepository;
 
     public DataLoader(MemberRepository memberRepository) {
         this.memberRepository = memberRepository;
     }
 
     public void loadData() {
-        memberRepository.save(new Member("admin@email.com", "password", 20, Arrays.asList(RoleType.ROLE_ADMIN.name())));
-        memberRepository.save(new Member("member@email.com", "password", 20, Arrays.asList(RoleType.ROLE_MEMBER.name())));
+        memberRepository.save(new Member("admin@email.com", "password", 20, List.of(RoleType.ROLE_ADMIN.name())));
+        memberRepository.save(new Member("member@email.com", "password", 20, List.of(RoleType.ROLE_MEMBER.name())));
     }
 }
